Fix chat overflowing off the bottom of the screen

--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body {
         "scores game next"
         "text game circle";
     grid-template-columns: 1fr max-content 1fr;
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: 33% 67%;
 }
 
 #game-canvas {
